# lserializing

./: CITATION.cff  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  annotated.html  annotated_dup.js  classes.html  classlimes_1_1serializing_1_1_format-members.html  classlimes_1_1serializing_1_1_format.html  classlimes_1_1serializing_1_1_format.js  classlimes_1_1serializing_1_1_known_formats-members.html  classlimes_1_1serializing_1_1_known_formats.html  classlimes_1_1serializing_1_1_known_formats_1_1_register-members.html  classlimes_1_1serializing_1_1_known_formats_1_1_register.html  classlimes_1_1serializing_1_1_node-members.html  classlimes_1_1serializing_1_1_node.html  classlimes_1_1serializing_1_1_node.js  classlimes_1_1serializing_1_1_printer-members.html  classlimes_1_1serializing_1_1_printer.html  classlimes_1_1serializing_1_1_printer.js  classlimes_1_1serializing_1_1_schema-members.html  classlimes_1_1serializing_1_1_schema.html  classlimes_1_1serializing_1_1_serializable_data-members.html  classlimes_1_1serializing_1_1_serializable_data.html  classlimes_1_1serializing_1_1_serializable_data.js  conceptlimes_1_1serializing_1_1_can_serialize.html  conceptlimes_1_1serializing_1_1_implements_serializable_data.html  conceptlimes_1_1serializing_1_1_is_format.html  conceptlimes_1_1serializing_1_1enums_1_1_enum.html  conceptlimes_1_1serializing_1_1enums_1_1_integral.html  concepts.html  concepts.js  dir_16f86146ed2ae6b439cb90f44a84338d.html  dir_16f86146ed2ae6b439cb90f44a84338d.js  dir_16f86146ed2ae6b439cb90f44a84338d_dep.map  dir_16f86146ed2ae6b439cb90f44a84338d_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  (+122 more)
cmake/: lserializing-config.in  version.in
cmake/presets/: base.json
docs/: CMakeLists.txt
include/lserializing/: lserializing.h  lserializing_Enums.h  lserializing_KnownFormats.h  lserializing_Node.h  lserializing_Printer.h  lserializing_Schema.h  lserializing_SerializableData.h  lserializing_SerializingFormat.h
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  concepts_0.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+12 more)
src/: CMakeLists.txt  lserializing_Formats.cpp  lserializing_INI.cpp  lserializing_JSON.cpp  lserializing_KnownFormats.cpp  lserializing_Node.cpp  lserializing_Printer.cpp  lserializing_TOML.cpp  lserializing_XML.cpp  lserializing_YAML.cpp
tests/: CMakeLists.txt  Concepts.cpp  Enums.cpp  Node.cpp
